--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 
 # Node
 /node_modules
-/wapp
 npm-debug.log
 yarn-error.log
 
@@ -32,6 +31,7 @@ yarn-error.log
 # Miscellaneous
 /.angular/cache
 .sass-cache/
+.angular/
 /connect.lock
 /coverage
 /libpeerconnection.log
